# Trading-Bot

./: Mad_Rabbit_Bot.mq5  README.md  pyproject.toml
src/bot/core/: risk.py
src/bot/strategies/: __init__.py  scalper.py
tests/: test_risk_manager.py  test_strategies.py
